--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 <body>
   <div class="app-shell">
     <header id="homeHeader">
-      <h1>BABAPOLY</h1>
-      <button class="settings-btn" id="settingsToggle" aria-pressed="false">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M12 8.5a3.5 3.5 0 100 7 3.5 3.5 0 000-7zm9.94 3.19l-2.09-.33a7.24 7.24 0 00-.56-1.36l1.21-1.8a.75.75 0 00-.1-.94L18.74 4.9a.75.75 0 00-.94-.1l-1.8 1.21a7.24 7.24 0 00-1.36-.56l-.33-2.09A.75.75 0 0013.58 3h-3.16a.75.75 0 00-.74.64l-.33 2.09a7.24 7.24 0 00-1.36.56l-1.8-1.21a.75.75 0 00-.94.1L3.04 7.26a.75.75 0 00-.1.94l1.21 1.8a7.24 7.24 0 00-.56 1.36l-2.09.33a.75.75 0 00-.64.74v3.16c0 .38.28.7.64.74l2.09.33c.13.47.3.92.56 1.36l-1.21 1.8a.75.75 0 00.1.94l2.22 2.22a.75.75 0 00.94.1l1.8-1.21c.44.26.89.43 1.36.56l.33 2.09c.05.36.36.64.74.64h3.16c.38 0 .7-.28.74-.64l.33-2.09c.47-.13.92-.3 1.36-.56l1.8 1.21c.28.19.66.16.94-.1l2.22-2.22c.26-.28.29-.66.1-.94l-1.21-1.8c.26-.44.43-.89.56-1.36l2.09-.33c.36-.05.64-.36.64-.74v-3.16a.75.75 0 00-.64-.74z"></path>
-        </svg>
-        Ajustes
+      <button class="settings-terminal-btn" id="settingsToggle" aria-pressed="false" aria-label="Activar modo ajustes">
+        <span class="terminal-title">BABAPOLY</span><span class="terminal-cursor" aria-hidden="true">_</span>
       </button>
     </header>
     <main>
       <section id="screen-inicio" class="active">
-        <div class="player-toolbar" id="playerToolbar" hidden>
-          <button id="addPlayerBtn">Añadir jugador</button>
-          <span class="helper-text">Gestiona jugadores desde el modo ajustes.</span>
+        <div class="home-content">
+          <div class="player-toolbar" id="playerToolbar" hidden>
+            <button id="addPlayerBtn" class="add-player-btn" type="button">
+              <span class="svg-wrapper">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path d="M12 12.5a4 4 0 10-4-4 4 4 0 004 4zm0 1.5c-4.2 0-7.25 2.43-7.25 6.05 0 .53.43.95.96.95h12.58c.53 0 .96-.42.96-.95C19.25 14.93 16.2 14 12 14zM20 8.75h-1.75V7a.75.75 0 10-1.5 0v1.75H15a.75.75 0 100 1.5h1.75V12a.75.75 0 101.5 0v-1.75H20a.75.75 0 000-1.5z"></path>
+                </svg>
+              </span>
+              <span>Añadir jugador</span>
+            </button>
+          </div>
+          <div class="player-list" id="playerList"></div>
+          <p class="helper-text">
+            Pulsa dos jugadores para transferir dinero. Activa los ajustes para añadir o eliminar jugadores.
+          </p>
         </div>
-        <div class="player-list" id="playerList"></div>
-        <p class="helper-text">
-          Pulsa dos jugadores para transferir dinero. Activa los ajustes para añadir o eliminar jugadores.
-        </p>
       </section>
 
       <section id="screen-jimbo">
@@ -101,11 +105,7 @@
           <div class="player-money"></div>
         </div>
         <div class="player-actions" hidden>
-          <button class="icon-btn" data-action="delete" title="Eliminar jugador">
-            <svg viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M9 3a1 1 0 00-.894.553L7.382 5H4a1 1 0 100 2h1l.757 12.132A2 2 0 007.75 21h8.5a2 2 0 001.993-1.868L19 7h1a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0015 3H9zm3 5a1 1 0 011 1v8a1 1 0 11-2 0v-8a1 1 0 011-1zm-3 1a1 1 0 012 0v8a1 1 0 11-2 0v-8zm6 0a1 1 0 012 0v8a1 1 0 11-2 0v-8z"/>
-            </svg>
-          </button>
+          <button class="player-delete-btn" data-action="delete" title="Eliminar jugador" aria-label="Eliminar jugador">&times;</button>
         </div>
       </div>
     </button>
