ajuste inicio y jimbo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Baba Poly</title>
+  <link rel="icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" href="css/baba-poly.css">
   <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -33,9 +34,6 @@
 
       <section id="screen-jimbo">
         <h2 class="section-title">Jimbo Arena</h2>
-        <p class="helper-text">
-          Selecciona un jugador para enviar a su mascota a una batalla por turnos. Gana para subir de nivel y conseguir más dinero.
-        </p>
         <div id="jimboSelect" class="selector-grid"></div>
         <div id="battleStage" class="battle-stage" hidden>
           <div class="battle-scene">
