--- a/index.html
+++ b/index.html
@@ -195,18 +195,20 @@
           <div class="player-name"></div>
           <div class="player-money"></div>
         </div>
-        <div class="player-actions">
+        <div class="player-card-visual">
+          <div class="player-avatar-blur" aria-hidden="true"></div>
+          <div class="player-avatar-shade" aria-hidden="true"></div>
           <img class="player-avatar" alt="">
-          <span
-            class="player-delete-btn"
-            role="button"
-            data-action="delete"
-            title="Eliminar jugador"
-            aria-label="Eliminar jugador"
-            tabindex="-1"
-          >&times;</span>
         </div>
       </div>
+      <span
+        class="player-delete-btn"
+        role="button"
+        data-action="delete"
+        title="Eliminar jugador"
+        aria-label="Eliminar jugador"
+        tabindex="-1"
+      >&times;</span>
     </button>
   </template>
 
