jimbo entra en juego

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
               </div>
             </div>
             <!-- Characters with dynamic sources -->
-            <img src="assets/mascota.webp" alt="Mascota" class="battle-character battle-character-player"
-              loading="lazy">
+            <img src="assets/jimbo.png" alt="Jimbo" class="battle-character battle-character-player" loading="lazy">
             <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="Enemigo"
               class="battle-character battle-character-enemy" loading="lazy">
           </div>
