--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
       </section>
 
       <section id="screen-jimbo">
-        <h2 class="section-title">Jimbo Arena</h2>
+        <div class="jimbo-title-container">
+          <div class="jimbo-button">
+            PASEO JIMBO
+            <div class="hoverEffect">
+              <div></div>
+            </div>
+          </div>
+        </div>
         <div id="jimboSelect" class="selector-grid"></div>
         <div id="battleStage" class="battle-stage" hidden>
           <div class="battle-scene">
