--- a/index.html
+++ b/index.html
@@ -55,9 +55,36 @@
 <body>
   <div class="app-shell">
     <header id="homeHeader">
-      <button class="settings-terminal-btn" id="settingsToggle" aria-pressed="false" aria-label="Activar modo ajustes">
-        <span class="terminal-title">BABAPOLY</span><span class="terminal-cursor" aria-hidden="true">_</span>
-      </button>
+      <div class="header-nav-container">
+        <button class="settings-terminal-btn" id="settingsToggle" aria-pressed="false"
+          aria-label="Activar modo ajustes">
+          <span class="terminal-title">BABAPOLY</span><span class="terminal-cursor" aria-hidden="true">_</span>
+        </button>
+        <div class="settings-menu-reveal">
+          <div class="player-toolbar" id="playerToolbar">
+            <button id="addPlayerBtn" class="add-player-btn" type="button">
+              <span class="svg-wrapper">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path
+                    d="M12 12.5a4 4 0 10-4-4 4 4 0 004 4zm0 1.5c-4.2 0-7.25 2.43-7.25 6.05 0 .53.43.95.96.95h12.58c.53 0 .96-.42.96-.95C19.25 14.93 16.2 14 12 14zM20 8.75h-1.75V7a.75.75 0 10-1.5 0v1.75H15a.75.75 0 100 1.5h1.75V12a.75.75 0 101.5 0v-1.75H20a.75.75 0 000-1.5z">
+                  </path>
+                </svg>
+              </span>
+              <span>Añadir</span>
+            </button>
+            <button id="resetGameBtn" class="add-player-btn reset-btn" type="button">
+              <span class="svg-wrapper">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path
+                    d="M17.65 6.35A7.958 7.958 0 0012 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0112 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z">
+                  </path>
+                </svg>
+              </span>
+              <span>Reiniciar</span>
+            </button>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
       <section id="screen-inicio" class="active">
@@ -72,6 +99,16 @@
                 </svg>
               </span>
               <span>Añadir jugador</span>
+            </button>
+            <button id="resetGameBtn" class="add-player-btn reset-btn" type="button">
+              <span class="svg-wrapper">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                  <path
+                    d="M17.65 6.35A7.958 7.958 0 0012 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08A5.99 5.99 0 0112 18c-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z">
+                  </path>
+                </svg>
+              </span>
+              <span>Reiniciar partida</span>
             </button>
           </div>
           <div class="player-list" id="playerList"></div>
@@ -216,36 +253,42 @@
       </section>
 
       <section id="screen-ruleta">
-        <h2 class="section-title">Ruleta Baba</h2>
+        <div id="rouletteSelectHeader" class="casino-title-container">
+          <img src="assets/fuego.gif" class="fire-gif" alt="">
+          <img src="assets/tituloruleta.png" class="casino-logo" alt="Ruleta Baba">
+        </div>
 
         <!-- Player Selection State -->
         <div id="rouletteSelect" class="selector-grid"></div>
 
         <!-- Game State -->
         <div id="rouletteGame" class="roulette-game" hidden>
-          <div class="roulette-header">
-            <div class="roulette-player-info">
-              <span id="roulettePlayerName" class="player-name-display"></span>
-              <span id="roulettePlayerMoney" class="player-money-display"></span>
-            </div>
-            <button class="btn btn-ghost" id="rouletteExitBtn">Salir</button>
-          </div>
-
           <div class="roulette-container">
             <!-- Table Container -->
             <div class="roulette-table-container">
               <div class="roulette-history-controls">
-                <button id="undoBtn" class="btn-history" title="Deshacer (Ctrl+Z)" aria-label="Deshacer">
-                  <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+                <div class="total-bet-display">Apuesta: <span id="rouletteTotalBet">0</span>€</div>
+                <div class="history-btns-group">
+                  <button id="undoBtn" class="btn-history" title="Deshacer (Ctrl+Z)" aria-label="Deshacer">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                      <path
+                        d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z" />
+                    </svg>
+                  </button>
+                  <button id="redoBtn" class="btn-history" title="Rehacer (Ctrl+Y)" aria-label="Rehacer">
+                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+                      <path
+                        d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z" />
+                    </svg>
+                  </button>
+                </div>
+                <button id="repeatBetsBtn" class="btn-history btn-repeat" title="Repetir última apuesta"
+                  aria-label="Repetir apuesta">
+                  <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
                     <path
-                      d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z" />
+                      d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z" />
                   </svg>
-                </button>
-                <button id="redoBtn" class="btn-history" title="Rehacer (Ctrl+Y)" aria-label="Rehacer">
-                  <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-                    <path
-                      d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16c1.05-3.19 4.05-5.5 7.6-5.5 1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z" />
-                  </svg>
+                  <span>REPETIR</span>
                 </button>
               </div>
               <div class="roulette-table" id="rouletteBoard">
@@ -268,6 +311,15 @@
               <button class="btn btn-secondary" id="clearBetsBtn">Limpiar</button>
               <button class="btn btn-primary spin-btn" id="spinBtn">RESULTADO</button>
             </div>
+
+            <div class="roulette-footer">
+              <div class="roulette-player-info">
+                <span id="roulettePlayerName" class="player-name-display"></span>
+                <span id="roulettePlayerMoney" class="player-money-display"></span>
+              </div>
+              <button class="btn btn-ghost" id="rouletteExitBtn">Salir del juego</button>
+            </div>
+
             <div class="last-results" id="lastResults"></div>
           </div>
 
